# phm_ml

./: .gitignore  LICENSE  README.md  config_loader.py  data.yaml  data_preprocess.py  lab1-xgboost-for-timeseries.ipynb  preprocess.py  pyproject.toml
config/: data.yaml
phm_ml/config/: config_loader.py
phm_ml/data_process/: data_backblaze_harddrive.py
phm_ml/utils/: logging.py
scripts/: run_backblaze.py
